added a new code

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
     </header>
 
     <main>
+
+        <!-- piilar section -->
         <section class="pillars">
             <div class="pillar-main">
                 <h1 class="pillar-title">Pillars of "Bangladesh 2.0"</h1>
@@ -58,7 +60,7 @@
                 </div>
             </div>
         </section>
-
+<!-- vision section -->
         <section class="vision">
            <div class="vision-main">
             <h1>The Vision of Future</h1>
@@ -101,7 +103,7 @@
             </div>
            </div>
         </section>
-
+<!-- opanion section -->
         <section class="openion">
             <div class="matter">
                 <h1>Your Opinion Matters</h1>
@@ -149,7 +151,7 @@
                 </div>
             </div>
         </section>
-
+    <!-- news section -->
 
         <section class="news">
             <div class="new-satelite">
@@ -203,6 +205,37 @@
                 
             </div>
         </section>
+<!-- donate section -->
+        <section class="donate-section">
+            <div class="donate">
+                <h1>Donate Today</h1>
+                <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure.</p>
+         <div class="take">
+           <div class="take-button">
+            <button class="semilar">100 Taka</button>
+        </div>
+           <div class="take-button ">
+            <button class="diff">100 Taka</button>
+        </div>
+           <div class="take-button">
+            <button class="semilar">100 Taka</button>
+        </div>
+           <div class="take-button">
+            <button class="semilar">100 Taka</button>
+        </div>
+            
+          </div>
+
+         <input type="text" class="other-aount" placeholder="Other Amount (Taka)">
+         <button class="sahre-btn">Done Now</button>
+         </div>
+        </section>
+<!-- subscribe section -->
+        <section class="subscribe">
+
+        </section>
+
+
     </main>
 </body>
 </html>
