--- a/index.html
+++ b/index.html
@@ -232,7 +232,18 @@
         </section>
 <!-- subscribe section -->
         <section class="subscribe">
+            <div class="subcribe-section">
+           <div class="newslatter">
+            <h1>Subscribe Newsletter</h1>
+            <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology,<br> promoting inclusive growth.</p>
 
+           <div class="info">
+            <input type="text" class="" placeholder="Enter your email here">
+            <button>Subscribe</button>
+           </div>
+           </div>
+
+            </div>
         </section>
 
 
