--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <h5 class="vision-h5">Green Energy</h5>
                     <p>Investments in solar and wind energy to ensure a sustainable and eco-friendly future.</p>
                     <div>
-                        <button class="btn1 mani"><a href="#">Learn More</a></button>
+                        <button class="btn2 mani"><a href="#">Learn More</a></button>
                     </div>
                 </div>
                 <div class="visionr-3 tips">
@@ -88,7 +88,7 @@
                     <h5 class="vision-h5">Modern Infrastructure</h5>
                     <p>Building state-of-the-art infrastructure to support economic growth and global competitiveness.</p>
                     <div >
-                        <button class="btn1 mani"><a href="#">Learn More</a></button>
+                        <button class="btn3 mani"><a href="#">Learn More</a></button>
                     </div>
                 </div>
             </div>
@@ -241,6 +241,7 @@
             <input type="text" class="" placeholder="Enter your email here">
             <button>Subscribe</button>
            </div>
+           <p>We promise not to spam you!</p>
            </div>
 
             </div>
@@ -248,5 +249,21 @@
 
 
     </main>
+<!-- footer section -->
+<footer>
+    <div class="foot-section">
+        <div class="feta">
+            <div class="footer-h1">
+                 <h1>Bangladesh 2.0</h1>
+            </div>
+            <hr>
+            <div class="fotter-icon">
+                <a href="#"><img src="./assets/facebook.png" alt=""></a>
+                <a href="#"><img src="./assets/instagram.png" alt=""></a>
+                <a href="#"><img src="./assets/x.png" alt=""></a>
+            </div>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
