--- a/index.html
+++ b/index.html
@@ -250,20 +250,18 @@
 
     </main>
 <!-- footer section -->
-    <footer>
+    <footer class="footer-section">
       <div class="foot-section">
-        <div class="feta">
             <div class="footer-h1">
-                 <h1>Bangladesh 2.0</h1>
+                        <h1>Bangladesh 2.0</h1>
             </div>
-            <hr>
+        <hr>
             <div class="fotter-icon">
                 <a href="#"><img src="./assets/facebook.png" alt=""></a>
                 <a href="#"><img src="./assets/instagram.png" alt=""></a>
                 <a href="#"><img src="./assets/x.png" alt=""></a>
             </div>
         </div>
-     </div>
     </footer>
 </body>
 </html>
